# dfaOG

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: audit_pipeline.py  opengradient_client.py  protocol_data.py
backend/tests/: test_audit_pipeline.py
frontend/: .env.local.example  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/audit/: AuditForm.tsx  AuditResults.tsx  index.ts
frontend/components/layout/: Footer.tsx  Header.tsx
frontend/components/shared/: Button.tsx  Card.tsx  Checkbox.tsx  Input.tsx  Label.tsx  Progress.tsx  Select.tsx  Tabs.tsx  Textarea.tsx  index.ts
